<resources>
    <string name="app_name">Practica420201</string>
    <string name="titulo">Calcular area del paralelogramo</string>
    <string name="lado1">Lado 1</string>
    <string name="lado2">Lado 2</string>
    <string name="calularArea">Calcular área</string>
    <string name="angulo">Ángulo</string>
    <string name="titulo1">Área del paralelogramo</string>
    <string name="perimetro_rectangulo">Perímetro de un rectángulo</string>
    <string name="ingresebase">Ingrese el valor de la base en cm</string>
    <string name="base">Base del rectángulo (cm)</string>
    <string name="valor_altura">Ingrese el valor de la altura en cm</string>
    <string name="altura">Altura del rectángulo (cm)</string>
    <string name="calcular_perimetro">Calcular perímetro</string>
    <string name="perimetro_resultado">El perímetro del rectángulo es:</string>
    <string name="cm"> cm</string>
    <string name="vacio" />
    <string name="perimetro_hex">Perimetro Hexagono</string>
    <string name="hexagon">Hexagono</string>
    <string name="lados">Lados</string>
    <string name="longitud">Longitud</string>
    <string name="perimetro">Perimetro</string>
    <string name="calculo">Calcular</string>
    <string name="perimetroCirculo">Calcular el perímetro de un círculo</string>
    <string name="ingresarRadio">Ingrese el radio</string>
    <string name="valorRadio" />
    <string name="error_circulo">Ingrese un valor</string>
    <string name="calcularPerimetroCir">Calcular</string>
    <string name="lado_a">a</string>
    <string name="lado_b">b</string>
    <string name="resultado">Mostrar Resultado</string>
    <string name="area_triangulo">Área del Triángulo</string>
    <string name="base_triangulo">Base del Triángulo en centímetros (b)</string>
    <string name="altura_triangulo">Altura del Triángulo en centímetros (h)</string>
    <string name="calcular_area_triangulo_button">Calcular Área</string>
    <string name="image_description">Partes del triangulo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ladouno">Valor del lado uno</string>
    <string name="lado_dos">Valor del  lado dos</string>
    <string name="lado_tres">Valor del lado tres</string>
    <string name="calculo_perimetro">Perimetro de un triangulo</string>
    <string name="hexagon_area">Hexagon area</string>
    <string name="regular">Regular</string>
    <string name="irregular">Irregular</string>
    <string name="regular_hexagon_area">Regular hexagon area</string>
    <string name="irregular_hexagon_area">Irregular hexagon area</string>
    <string name="calculate">Calcular</string>
    <string name="Side">Lado S(unidades)</string>
    <string name="resultLabel_textView">Resultado :</string>
    <string name="result_textView">" "%1$.3f u²</string>
    <string name="LongitudLado">longitutudLado</string>
    <string name="rtaArea">rtaArea</string>
    <string name="Calcular">calcular</string>
    <string name="textview">TextView</string>
    <string name="hola">Hola</string>
    <string name="Area">area</string>
    <string name="Titulo">titulo</string>
    <string name="lado">Lado:</string>
    <string name="area_de_un_cuadrado">Área de un cuadrado</string>
    <string name="area">Area:</string>
    <string name="Lado">Lado:</string>
    <string name="ImagenCuadro">cuadrado</string>
    <string name="en_cm">En cm</string>
    <string name="Vacio">" "</string>
    <string name="_0">0</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="perimetro_triangulo">Perímetro de un triángulo</string>
    <string name="area_rectangulo">Área de un rectángulo</string>
    <string name="area_hexagono">Área de un hexágono</string>
    <string name="area_paralelogramo">Área paralelogramo</string>
    <string name="valor_a">Ingrese valor del lado:</string>
    <string name="calcular">Calcular</string>
    <string name="valor">"Ingrese valor "</string>
    <string name="perimetro_cuadrado">Perímetro de un cuadrado</string>
    <string name="area_parelogramo">Área de un parelogramo</string>
    <string name="perimetro_de_un_circulo">Perimetro de un circulo</string>
    <string name="area_de_un_circulo">Área de un circulo</string>
    <string name="perimetro_de_un_rectangulo">Perimetro de un rectangulo</string>
    <string name="area_de_un_rectangulo">Área de un rectangulo</string>
    <string name="perimetro_de_un_triangulo">Perimetro de un triangulo</string>
    <string name="perimetro_de_un_hexagono">Perimetro de un hexágono</string>
    <string name="x_y">x.y</string>
    <string name="ingrese_los_valores_de_los_lados">Ingrese los valores de los lados</string>
    <string name="ingrese_base">Ingrese la base del triángulo!</string>
    <string name="ingrese_altura">Ingrese la altura del triángulo!</string>
    <string name="area_triangulo_res">El area del triángulo es: %f cm^2</string>
    <string name="ingrese_lado_a">Ingrese lado a</string>
    <string name="ingrese_lado_b">Ingrese lado b</string>
    <string name="ingrese_angulo">Ingrese el ángulo</string>
    <string name="error_base_rectangulo">Ingrese un valor para la base</string>
    <string name="error_altura_rectangulo">Ingrese un valor para la altura</string>
    <string name="mensaje_errorl1_perimetro_triangulo">\"Por favor ingrese lado uno \"</string>
    <string name="mensaje_errorl2_perimetro_triangulo">\"Por favor ingrese lado dos \"</string>
    <string name="mensaje_errorl3_perimetro_triangulo">\"Por favor ingrese lado tres \"</string>
    <string name="rea_de_un_cuadrado">Área de un cuadrado</string>
    <string name="resultadoCirculo" />
    <string name="resultadoPerimetroCirculo">\El perímetro del círculo es: \</string>
    <string name="name_app">FigurApp</string>
    <string name="team_name">Moviles UdeA</string>
</resources>