<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_area_hexagono"
        android:orderInCategory="100"
        android:title="@string/area_hexagono"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_perimetro_hexagono"
        android:orderInCategory="100"
        android:title="@string/perimetro_de_un_hexagono"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_area_triangulo"
        android:orderInCategory="100"
        android:title="@string/area_triangulo"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_perimetro_triangulo"
        android:orderInCategory="100"
        android:title="@string/perimetro_de_un_triangulo"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_area_rectangulo"
        android:orderInCategory="100"
        android:title="@string/area_de_un_rectangulo"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_perimetro_rectangulo"
        android:orderInCategory="100"
        android:title="@string/perimetro_rectangulo"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_perimetro_circulo"
        android:orderInCategory="100"
        android:title="@string/perimetro_de_un_circulo"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_area_cuadrado"
        android:orderInCategory="100"
        android:title="@string/area_de_un_cuadrado"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_perimetro_cuadrado"
        android:orderInCategory="100"
        android:title="@string/perimetro_cuadrado"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_area_paralelogramo"
        android:orderInCategory="100"
        android:title="@string/area_parelogramo"
        app:showAsAction="never" />

</menu>