<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_area_triangulo">
    <fragment
        android:id="@+id/nav_area_triangulo"
        android:name="com.edwinacubillos.practica420201.AreaTrianguloFragment"
        android:label="@string/area_triangulo" />
    <fragment
        android:id="@+id/nav_perimetro_triangulo"
        android:name="com.edwinacubillos.practica420201.perimetro_triangulo"
        android:label="@string/perimetro_triangulo"
        tools:layout="@layout/fragment_perimetro_triangulo" />
    <fragment
        android:id="@+id/nav_area_rectangulo"
        android:name="com.edwinacubillos.practica420201.area_rectanguloFragment"
        android:label="@string/area_rectangulo" />
    <fragment
        android:id="@+id/nav_perimetro_rectangulo"
        android:name="com.edwinacubillos.practica420201.fragments.PerimetroRectanguloFragment"
        android:label="@string/perimetro_rectangulo"
        tools:layout="@layout/fragment_perimetro_rectangulo" />
    <fragment
        android:id="@+id/nav_area_hexagono"
        android:name="com.edwinacubillos.practica420201.fragments.HexagonAreaFragment"
        android:label="@string/area_hexagono"
        tools:layout="@layout/fragment_hexagon_area" />
    <fragment
        android:id="@+id/nav_perimetro_hexagono"
        android:name="com.edwinacubillos.practica420201.Fragment_Perimetro_Hexagono"
        android:label="@string/perimetro_hex"
        tools:layout="@layout/nav_perimetro_hexagono" />

    <fragment
        android:id="@+id/nav_perimetro_circulo"
        android:name="com.edwinacubillos.practica420201.PerimetrocirculoFragment"
        android:label="@string/perimetroCirculo"
        tools:layout="@layout/fragment_perimetrocirculo" />
    <fragment
        android:id="@+id/nav_area_cuadrado"
        android:name="com.edwinacubillos.practica420201.AreaCuadroFragment"
        android:label="@string/area_de_un_cuadrado"
        tools:layout="@layout/fragment_area_cuadro" />


</navigation>