<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:textAlignment="center"
    tools:context=".fragments.Fragment_Perimetro_Hexagono">


    <ImageView
        android:id="@+id/imageView_hexagono"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/hexagon"
        android:paddingTop="10dp"
        android:src="@drawable/ic_regular_hexagon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textView_lados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/lados"
            android:textColor="#191818"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTex_lados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/darkgray"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_lados2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/longitud"
            android:textColor="#191818"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTex_longitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/darkgray"
            android:textSize="18sp" />
    </LinearLayout>


    <Button
        android:id="@+id/button_calculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:padding="20dp"
        android:text="@string/calculo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_perimetro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/perimetro"
            android:textColor="#191818"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTex_perimetro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

    </LinearLayout>

</LinearLayout>